fixed layout bug

--- a/src/features/article/Article.module.css
+++ b/src/features/article/Article.module.css
@@ -3,7 +3,6 @@
     border-radius: 5px;
     padding: 15px;
     margin-bottom: 20px;
-    max-width: 400px;
     cursor: pointer;
   }
   .previewContainer:hover {
